fix: Add license reference for NBA data (#39)

--- a/examples/nba.ipynb
+++ b/examples/nba.ipynb
@@ -45,6 +45,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We use NBA data from [538](https://abcnews.go.com/538) under the [Creative Commons Attribution 4.0 License](https://creativecommons.org/licenses/by/4.0/).\n",
+    "\n",
     "**NOTE:** the below will not run on Windows machines. Manually download the CSV if that is the case."
    ]
   },
