feat: Make scikit-learn an optional dependency (#47)
As many use cases will not require full scikit-learn compatibility
and scikit-learn is sizeable dependency, we default to ratings
which are not fully scikit-learn compatible and have no dependency
on scikit-learn.

Fully scikit-learn compatible ratings systems are still offered
via the sklearn submodule and optional sklearn dependency group.

--- a/examples/football.ipynb
+++ b/examples/football.ipynb
@@ -49,6 +49,7 @@
     "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit\n",
     "\n",
     "from elo_grad import PoissonEloEstimator, Regressor\n",
+    "from elo_grad.sklearn import SKPoissonEloEstimator\n",
     "\n",
     "\n",
     "print(f'Python {sys.version} on {sys.platform}.')"
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +233,7 @@
        "2016-08-13       1       1  1471046400        4      D  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +420,7 @@
        "2016-08-13     Crystal Palace - Defence     0      1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.5 ms ± 2.98 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
+      "25.5 ms ± 4.37 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
      ]
     }
    ],
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +562,7 @@
        " ('Chelsea - Defence', (1640822400, 1561.4380200053079))]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +824,7 @@
        "2022-01-02             0.925730  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1012,12 +1013,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As our estimator is `scikit-learn` compatible, we can use `scikit-learn` to do things like perform a grid search over hyper-parameters."
+    "`elo-grad` also offers the `scikit-learn` estimator `SKPoissonEloEstimator`.\n",
+    "We can then use `scikit-learn` to do things like perform a grid search over hyper-parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1059,10 +1061,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.015675</td>\n",
-       "      <td>0.001517</td>\n",
-       "      <td>0.010583</td>\n",
-       "      <td>0.003257</td>\n",
+       "      <td>0.010790</td>\n",
+       "      <td>0.002983</td>\n",
+       "      <td>0.008532</td>\n",
+       "      <td>0.002570</td>\n",
        "      <td>200</td>\n",
        "      <td>10</td>\n",
        "      <td>{'beta': 200, 'k_factor': 10}</td>\n",
@@ -1075,10 +1077,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.011816</td>\n",
-       "      <td>0.003495</td>\n",
-       "      <td>0.008834</td>\n",
-       "      <td>0.002392</td>\n",
+       "      <td>0.011184</td>\n",
+       "      <td>0.004232</td>\n",
+       "      <td>0.008122</td>\n",
+       "      <td>0.001213</td>\n",
        "      <td>200</td>\n",
        "      <td>50</td>\n",
        "      <td>{'beta': 200, 'k_factor': 50}</td>\n",
@@ -1095,8 +1097,8 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  param_beta  \\\n",
-       "0       0.015675      0.001517         0.010583        0.003257         200   \n",
-       "1       0.011816      0.003495         0.008834        0.002392         200   \n",
+       "0       0.010790      0.002983         0.008532        0.002570         200   \n",
+       "1       0.011184      0.004232         0.008122        0.001213         200   \n",
        "\n",
        "   param_k_factor                         params  split0_test_score  \\\n",
        "0              10  {'beta': 200, 'k_factor': 10}           1.163245   \n",
@@ -1111,14 +1113,14 @@
        "1                1  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gs = GridSearchCV(\n",
-    "    estimator=PoissonEloEstimator(entity_cols=('team', 'opponent'), score_col='score'), \n",
+    "    estimator=SKPoissonEloEstimator(entity_cols=('team', 'opponent'), score_col='score'), \n",
     "    param_grid={\n",
     "        'beta': [200],\n",
     "        'k_factor': [10, 50],\n",
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1166,7 @@
        " ('Liverpool - Defence', (1640736000, 1567.1180981942805))]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1391,7 @@
        "2022-01-02             0.925730               0.951970               0.999832  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1519,14 +1521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44.9 ms ± 6.71 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
+      "37.7 ms ± 3.24 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
      ]
     }
    ],
