--- a/examples/nba.ipynb
+++ b/examples/nba.ipynb
@@ -40,6 +40,7 @@
     "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit\n",
     "\n",
     "from elo_grad import EloEstimator, Regressor\n",
+    "from elo_grad.sklearn import SKEloEstimator\n",
     "\n",
     "\n",
     "print(f'Python {sys.version} on {sys.platform}.')"
@@ -292,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's do a performance benchmark."
+    "Let's do a performance benchmark for our lightweight estimator `EloEstimator`."
    ]
   },
   {
@@ -304,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "299 ms ± 8.78 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
+      "311 ms ± 17 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
      ]
     }
    ],
@@ -465,7 +466,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As our estimator is `scikit-learn` compatible, we can use `scikit-learn` to do things like perform a grid search over hyper-parameters."
+    "`elo-grad` also offers the `scikit-learn` estimator `SKEloEstimator`.\n",
+    "We can then use `scikit-learn` to do things like perform a grid search over hyper-parameters."
    ]
   },
   {
@@ -491,7 +493,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (2, 13)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>mean_fit_time</th><th>std_fit_time</th><th>mean_score_time</th><th>std_score_time</th><th>param_beta</th><th>param_k_factor</th><th>params</th><th>split0_test_score</th><th>split1_test_score</th><th>split2_test_score</th><th>mean_test_score</th><th>std_test_score</th><th>rank_test_score</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>struct[2]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i32</td></tr></thead><tbody><tr><td>0.279005</td><td>0.008425</td><td>0.112189</td><td>0.019831</td><td>200</td><td>10</td><td>{200,10}</td><td>0.640402</td><td>0.632654</td><td>0.636501</td><td>0.636519</td><td>0.003163</td><td>2</td></tr><tr><td>0.21795</td><td>0.120991</td><td>0.124444</td><td>0.035428</td><td>200</td><td>100</td><td>{200,100}</td><td>0.694953</td><td>0.676101</td><td>0.679805</td><td>0.683619</td><td>0.008155</td><td>1</td></tr></tbody></table></div>"
+       "<small>shape: (2, 13)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>mean_fit_time</th><th>std_fit_time</th><th>mean_score_time</th><th>std_score_time</th><th>param_beta</th><th>param_k_factor</th><th>params</th><th>split0_test_score</th><th>split1_test_score</th><th>split2_test_score</th><th>mean_test_score</th><th>std_test_score</th><th>rank_test_score</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>struct[2]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i32</td></tr></thead><tbody><tr><td>0.200956</td><td>0.032989</td><td>0.081744</td><td>0.002181</td><td>200</td><td>10</td><td>{200,10}</td><td>0.640402</td><td>0.632654</td><td>0.636501</td><td>0.636519</td><td>0.003163</td><td>2</td></tr><tr><td>0.155675</td><td>0.060365</td><td>0.083358</td><td>0.003495</td><td>200</td><td>100</td><td>{200,100}</td><td>0.694953</td><td>0.676101</td><td>0.679805</td><td>0.683619</td><td>0.008155</td><td>1</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (2, 13)\n",
@@ -501,8 +503,8 @@
        "│ ---       ┆ ---       ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---      │\n",
        "│ f64       ┆ f64       ┆ f64       ┆ f64       ┆   ┆ f64       ┆ f64       ┆ f64       ┆ i32      │\n",
        "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
-       "│ 0.279005  ┆ 0.008425  ┆ 0.112189  ┆ 0.019831  ┆ … ┆ 0.636501  ┆ 0.636519  ┆ 0.003163  ┆ 2        │\n",
-       "│ 0.21795   ┆ 0.120991  ┆ 0.124444  ┆ 0.035428  ┆ … ┆ 0.679805  ┆ 0.683619  ┆ 0.008155  ┆ 1        │\n",
+       "│ 0.200956  ┆ 0.032989  ┆ 0.081744  ┆ 0.002181  ┆ … ┆ 0.636501  ┆ 0.636519  ┆ 0.003163  ┆ 2        │\n",
+       "│ 0.155675  ┆ 0.060365  ┆ 0.083358  ┆ 0.003495  ┆ … ┆ 0.679805  ┆ 0.683619  ┆ 0.008155  ┆ 1        │\n",
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
@@ -513,7 +515,7 @@
    ],
    "source": [
     "gs = GridSearchCV(\n",
-    "    estimator=EloEstimator(entity_cols=('team1', 'team2'), score_col='result'), \n",
+    "    estimator=SKEloEstimator(entity_cols=('team1', 'team2'), score_col='result'), \n",
     "    param_grid={\n",
     "        'beta': [200],\n",
     "        'k_factor': [10, 100],\n",
@@ -650,7 +652,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "598 ms ± 112 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
+      "573 ms ± 94.5 ms per loop (mean ± std. dev. of 7 runs, 20 loops each)\n"
      ]
     }
    ],
